[IMP] given sequences and values all is working.

--- a/web_widget_x2many_graph/static/src/css/web_widget_x2many_graph.css
+++ b/web_widget_x2many_graph/static/src/css/web_widget_x2many_graph.css
@@ -6,3 +6,20 @@
 {
     white-space: normal;
 }
+
+.oe_form_field_x2many_graph .axis path,
+.oe_form_field_x2many_graph .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.oe_form_field_x2many_graph .x.axis path {
+  display: none;
+}
+
+.oe_form_field_x2many_graph .line {
+  fill: none;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
