--- a/web_widget_x2many_graph/views/templates.xml
+++ b/web_widget_x2many_graph/views/templates.xml
@@ -4,7 +4,7 @@
         <template id="assets_backend" name="web_widget_x2many_graph assets" inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
                 <script type="text/javascript" src="/web_widget_x2many_graph/static/src/js/web_widget_x2many_graph.js"></script>
-                <link rel="stylesheet" href="/web_widget_x2many_graph/static/src/css/web_widget_x2many_graph.css"/>
+                <link rel="stylesheet" type="text/less" href="/web_widget_x2many_graph/static/src/less/web_widget_x2many_graph.less"/>
             </xpath>
         </template>
     </data>
